crates/flight-profile/tests/snapshots/snapshot_tests__snapshot_minimal_profile_json.snap
---
source: crates/flight-profile/tests/snapshot_tests.rs
expression: profile
---
{
  "schema": "flight.profile/1",
  "sim": null,
  "aircraft": null,
  "axes": {},
  "pof_overrides": null
}
