crates/flight-profile/tests/snapshots/snapshot_tests__snapshot_minimal_profile_yaml.snap
---
source: crates/flight-profile/tests/snapshot_tests.rs
expression: profile
---
schema: flight.profile/1
sim: ~
aircraft: ~
axes: {}
pof_overrides: ~
