crates/flight-profile/tests/snapshots/snapshot_tests__snapshot_profile_merge_result_yaml.snap
---
source: crates/flight-profile/tests/snapshot_tests.rs
expression: merged
---
schema: flight.profile/1
sim: msfs
aircraft:
  icao: C172
axes:
  pitch:
    deadzone: 0.03
    expo: 0.5
    slew_rate: 1.2
    detents: []
    curve: ~
    filter: ~
pof_overrides: ~
