crates/flight-profile/tests/snapshots/snapshot_tests__snapshot_validation_error_curve_non_monotonic.snap
---
source: crates/flight-profile/tests/snapshot_tests.rs
expression: err.to_string()
---
Validation error: axes.pitch.curve[2]: Curve input values must be strictly increasing (monotonic)
